4014
I can reproduce this from the command line.

It might be related to the default argument changes that happen recently in trunk r21794.

Given the Java annotation

{code}
package hello;

import java.lang.annotation.*;

@Retention(RetentionPolicy.RUNTIME)
@Target(ElementType.METHOD)
@Documented
@Inherited
public @interface Hello {
  String msg() default "hello world";
}
{code}

and the Scala class:

{code}
package hello

class HelloWorld {
  @Hello
  def method() { }
}
{code}

when I try to compile from the command line using the command _scalac hello/*_ I get the following message:
{code}
hello/Hello.java:10: error: not found: type _root_
  String msg() default "hello world";
         ^
hello/HelloWorld.scala:4: error: annotation hello.Hello is missing argument msg
  @Hello
   ^
two errors found
{code}
